добавлят графику, шрифты, стилизацию body

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,14 @@
-h1 {
-  color: red;
-}
+@import "scaffolding.scss";
+@import "normalize.scss";
+@import "variables.scss";
+@import "mixins.scss";
+/*@import "blocks/page-header.scss";
+@import "blocks/main-info.scss";
+@import "blocks/advantages.scss";
+@import "blocks/about-company.scss";
+@import "blocks/products.scss";
+@import "blocks/contact-form.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/popup.scss";
+@import "blocks/page-main.scss";*/
+
