Добавляет базовую стилизацию, хедер для десктопа

--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -8,14 +8,20 @@
   padding-left: 20px;
   padding-right: 20px;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $desktop-width) {
     padding-left: 16px;
     padding-right: 16px;
   }
 }
 
 @mixin title {
+  margin: 0;
+
   font-weight: 500;
   font-size: 44px;
   line-height: 1.4;
+  padding-right: 55px;
+  padding-bottom: 6px;
+  border-bottom: solid 3px $green;
+  display: inline-block;
 }
