--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,13 +2,14 @@
 @import "normalize.scss";
 @import "variables.scss";
 @import "mixins.scss";
-/*@import "blocks/page-header.scss";
-@import "blocks/main-info.scss";
-@import "blocks/advantages.scss";
-@import "blocks/about-company.scss";
-@import "blocks/products.scss";
-@import "blocks/contact-form.scss";
-@import "blocks/page-footer.scss";
+@import "blocks/button.scss";
+@import "blocks/page-header.scss";
+@import "blocks/introduction.scss";
 @import "blocks/popup.scss";
-@import "blocks/page-main.scss";*/
+@import "blocks/page-footer.scss";
+@import "blocks/product.scss";
+@import "blocks/explanation.scss";
+@import "blocks/technology.scss";
+@import "blocks/questions.scss";
+@import "blocks/contacts.scss";
 
