--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,7 +4,7 @@
 @import "mixins.scss";
 @import "blocks/button.scss";
 @import "blocks/page-header.scss";
-@import "blocks/introduction.scss";
+@import "blocks/intro.scss";
 @import "blocks/popup.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/product.scss";
@@ -12,4 +12,4 @@
 @import "blocks/technology.scss";
 @import "blocks/questions.scss";
 @import "blocks/contacts.scss";
-
+@import "blocks/page-main.scss";
