--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -39,7 +39,6 @@
 .intro__container {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 154px;
 
   @include padding;
   padding-bottom: 35px;
@@ -57,6 +56,10 @@
 .intro__message {
   margin: 0;
   font-size: 17px;
+}
+
+.intro__button-container {
+  margin-top: 77px;
 }
 
 .intro__button {
