--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -16,7 +16,11 @@ body {
   background-image: url("../img/body-background.png");
   background-repeat: no-repeat;
   background-size: 1366px 1366px;
-  background-position: 50% 0;
+  background-position: 50% -20.5%;
+
+  @media (max-width: $tablet-width) {
+    background-size: 720px 720px;
+  }
 }
 
 img {
