--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,5 +1,11 @@
 .page-main {
-  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 92vh;
+}
+
+.page-main-intro {
+  display: block;
 }
 
 .page-main__link {
