--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,4 @@
 @import "blocks/questions.scss";
 @import "blocks/contacts.scss";
 @import "blocks/page-main.scss";
+@import "blocks/scroll.scss";
