--- a/source/sass/blocks/explanation.scss
+++ b/source/sass/blocks/explanation.scss
@@ -1,19 +1,261 @@
+.explanation {
+  max-width: 1238px;
+  margin: 0 auto;
+  flex-grow: 1;
+
+  padding-left: 26px;
+  padding-right: 31px;
+
+  box-sizing: border-box;
+}
+
 .explanation__title {
   @include title;
+  margin-top: 72px;
+  margin-bottom: 58px;
 }
 
 .explanation__list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+
   @include list-reset;
+  padding-left: 30px;
+  box-sizing: border-box;
 }
 
+.explanation__item {
+  position: relative;
+
+  display: flex;
+
+  width: 48%;
+  margin-bottom: 78px;
+  box-sizing: border-box;
+
+  &:nth-child(2n) {
+    margin-top: 17px;
+  }
+
+  &:nth-child(3n) {
+    margin-left: 30px;
+  }
+
+  &:nth-child(4n) {
+    width: 44%;
+  }
+
+  &:nth-last-child(1),
+  &:nth-last-child(2) {
+    margin-bottom: 58px;
+  }
+}
+
+.explanation__item-glasses {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+
+    background-image: url("../img/long-strip.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: 100% 64px;
+    width: 100%;
+    height: 64px;
+
+    top: 6%;
+    left: 33%;
+  }
+}
+
+.explanation__column-image {
+  min-width: 195px;
+  min-height: 130px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: 195px 130px;
+
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+
+    width: 195px;
+    height: 130px;
+    border: 2px solid #0dd1a2;
+
+    box-sizing: border-box;
+    top: -12px;
+    left: 12px;
+
+    z-index: -1;
+  }
+
+  &::after {
+    position: absolute;
+
+    width: 40px;
+    height: 40px;
+    padding-left: 12px;
+
+    background-color: #ffffff;
+    border-radius: 50%;
+    box-sizing: border-box;
+    left: -8px;
+    top: 97px;
+
+    font-weight: bold;
+    font-size: 28px;
+
+    color: #0dd1a2;
+  }
+}
+
+.explanation__column-image-inventory {
+  background-image: url("../img/explanation-bg-1.jpg");
+
+  &::after {
+    content: "1";
+  }
+}
+
+.explanation__column-image-choose {
+  background-image: url("../img/explanation-bg-2.jpg");
+
+  &::after {
+    content: "2";
+  }
+}
+
+.explanation__column-image-glasses {
+  background-image: url("../img/explanation-bg-3.jpg");
+
+  &::after {
+    content: "3";
+  }
+}
+
+.explanation__column-image-galaxies {
+  background-image: url("../img/explanation-bg-4.jpg");
+
+  &::after {
+    content: "4";
+  }
+}
+
+.explanation__column-text {
+  width: 58%;
+  padding-left: 32px;
+
+  box-sizing: border-box;
+
+  &:nth-child(4n) {
+    width: 62%;
+  }
+}
+
+.explanation__column-text-inventory {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+
+    background-image: url("../img/strip.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: 100% 47px;
+    width: 100%;
+    height: 47px;
+
+    top: 6%;
+    left: 33%;
+  }
+}
+
+
 .explanation__item-title {
+  width: 117px;
   margin: 0;
+  margin-bottom: 10px;
 
   font-weight: 700;
   font-size: 21px;
+  line-height: 1.1;
 }
 
 .explanation__item-text {
   margin: 0;
   line-height: 1.3;
+}
+
+.explanation__slider-container {
+  display: none;
+}
+
+@media (max-width: $desktop-width) {
+  .explanation__item {
+    flex-wrap: wrap;
+  }
+
+  .explanation__column-text {
+    width: 100%;
+    padding-left: 0;
+  }
+
+  .explanation__item-title {
+    padding-top: 22px;
+    padding-bottom: 10px;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .explanation {
+    @include padding;
+  }
+
+  .explanation__list {
+    padding-left: 0;
+  }
+
+  .explanation__item {
+    display: none;
+    width: 100%;
+    margin-bottom: 20px;
+    flex-direction: column;
+  }
+
+  .explanation__column-text {
+    padding-left: 11px;
+    padding-right: 21px;
+  }
+
+  .explanation__column-text-inventory::before {
+    display: none;
+  }
+
+  .explanation__item-glasses::before {
+    display: none;
+  }
+
+  .explanation__item--active {
+    display: flex;
+  }
+
+  .explanation__column-image {
+    align-self: center;
+  }
+
+  .explanation__slider-container {
+    display: flex;
+    align-items: center;
+
+    width: 198px;
+    margin-left: auto;
+  }
 }
