--- a/source/sass/blocks/explanation.scss
+++ b/source/sass/blocks/explanation.scss
@@ -31,7 +31,7 @@
 
   display: flex;
 
-  width: 48%;
+  width: 48.3%;
   margin-bottom: 78px;
   box-sizing: border-box;
 
@@ -49,11 +49,11 @@
 
   &:nth-last-child(1),
   &:nth-last-child(2) {
-    margin-bottom: 58px;
+    margin-bottom: 48px;
   }
 }
 
-.explanation__item-glasses {
+.explanation__item-choose {
   position: relative;
 
   &::before {
@@ -63,12 +63,30 @@
     background-image: url("../img/long-strip.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
-    background-size: 100% 64px;
-    width: 100%;
-    height: 64px;
+    width: 86%;
+    height: 49%;
 
-    top: 6%;
-    left: 33%;
+    top: 138px;
+    right: 100%;
+  }
+}
+
+.explanation__column-text-glasses {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+
+    background-image: url("../img/strip.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: 100% 47px;
+    width: 83%;
+    height: 39px;
+
+    top: 10%;
+    left: 39%;
   }
 }
 
@@ -80,6 +98,8 @@
   background-size: 195px 130px;
 
   position: relative;
+
+  margin-right: 32px;
 
   &::before {
     content: "";
@@ -149,8 +169,7 @@
 }
 
 .explanation__column-text {
-  width: 58%;
-  padding-left: 32px;
+  width: 55%;
 
   box-sizing: border-box;
 
@@ -169,15 +188,13 @@
     background-image: url("../img/strip.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
-    background-size: 100% 47px;
-    width: 100%;
+    width: 81%;
     height: 47px;
 
-    top: 6%;
-    left: 33%;
+    top: 3%;
+    left: 35%;
   }
 }
-
 
 .explanation__item-title {
   width: 117px;
@@ -212,11 +229,42 @@
     padding-top: 22px;
     padding-bottom: 10px;
   }
+
+  .explanation__column-text-inventory {
+    &::before {
+      top: 32px;
+      left: 24%;
+    }
+  }
+
+  .explanation__item-choose {
+    &::before {
+      height: 21%;
+      top: 100%;
+      right: 100%;
+    }
+  }
+
+  .explanation__column-text-glasses {
+    &::before {
+      width: 75%;
+      height: 39px;
+      top: 19%;
+      left: 30%;
+    }
+  }
 }
 
 @media (max-width: $tablet-width) {
   .explanation {
     @include padding;
+  }
+
+  .explanation__title {
+    margin-top: 58px;
+    margin-bottom: 53px;
+
+    padding-bottom: 8px;
   }
 
   .explanation__list {
@@ -230,13 +278,35 @@
     flex-direction: column;
   }
 
+  .explanation__column-image {
+    margin-right: 17px;
+    align-self: center;
+  }
+
   .explanation__column-text {
     padding-left: 11px;
     padding-right: 21px;
   }
 
+  .explanation__item-title {
+    padding-top: 32px;
+    padding-bottom: 2px;
+  }
+
   .explanation__column-text-inventory::before {
     display: none;
+  }
+
+  .explanation__item-choose {
+    &::before {
+      display: none;
+    }
+  }
+
+  .explanation__column-text-glasses {
+    &::before {
+      display: none;
+    }
   }
 
   .explanation__item-glasses::before {
@@ -245,10 +315,6 @@
 
   .explanation__item--active {
     display: flex;
-  }
-
-  .explanation__column-image {
-    align-self: center;
   }
 
   .explanation__slider-container {
