Добавляет стилизацию страницы технология

--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -120,7 +120,7 @@
   }
 
   .product__slider {
-    width: 288px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
@@ -143,10 +143,10 @@
   }
 
   .product__slider-item {
-    width: 288px;
+    width: 100%;
   }
 
   .product__slider-image {
-    width: 288px;
+    width: 100%;
   }
 }
