--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -60,6 +60,14 @@
   }
 }
 
+.slider__number {
+  margin: 0;
+  margin-right: 21px;
+
+  font-weight: 500;
+  font-size: 18px;
+}
+
 @media (max-width: $tablet-width) {
   .slider__button--back {
     &::before {
