--- a/source/sass/swiper.scss
+++ b/source/sass/swiper.scss
@@ -66,7 +66,7 @@
   -ms-flex-negative: 0;
   flex-shrink: 0;
   width: 100%;
-  /*height: 100%;*/
+  height: 100%;
   position: relative;
   -webkit-transition-property: -webkit-transform;
   transition-property: -webkit-transform;
