--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -121,6 +121,7 @@
 
   .product__slider {
     width: 100%;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
