--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -3,8 +3,20 @@
   color: #1c1c1c;
 }
 
+.popup__wrapper {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(27, 45, 55, 0.5);
+  position: absolute;
+  z-index: 1000;
+}
+
 .popup__title {
   margin: 0;
+  margin-bottom: 13px;
   font-weight: 700;
   font-size: 21px;
 
@@ -12,16 +24,42 @@
   line-height: 1.4;
 }
 
+.popup > form,
 .popup__form {
+  width: 560px;
+  min-height: 380px;
   background-color: #f3f3f3;
+
+  top: 194px;
+  left: 50%;
+  transform: translateX(-50%);
+  box-sizing: border-box;
+  padding-top: 60px;
+  padding-right: 79px;
+  padding-bottom: 58px;
+  padding-left: 81px;
+
+  position: absolute;
+
+  z-index: 1001;
+}
+
+.popup__form {
+  min-height: 338px;
 }
 
 .popup__message {
+  display: block;
   background-color: #f3f3f3;
+}
+
+.popup__send {
+  display: block;
 }
 
 .popup__text {
   margin: 0;
+  margin-bottom: 11px;
   line-height: 1.3;
   text-align: center;
   opacity: 0.6;
@@ -29,4 +67,131 @@
 
 .popup__button {
   color: rgba(28, 28, 28, 0.4);
+  width: 96px;
+}
+
+.popup__close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+  width: 48px;
+  height: 48px;
+
+  border: none;
+
+  cursor: pointer;
+
+  &::before {
+    content: "";
+
+    position: absolute;
+    width: 1px;
+    height: 14px;
+
+    background-color: #1c1c1c;
+
+    transform: rotate(-45deg);
+
+    top: 17px;
+    left: 50%;
+  }
+
+  &::after {
+    content: "";
+
+    position: absolute;
+    width: 1px;
+    height: 14px;
+
+    background-color: #1c1c1c;
+
+    transform: rotate(45deg);
+
+    top: 17px;
+    left: 50%;
+  }
+
+  &:hover {
+    opacity: 0.3;
+  }
+}
+
+.popup > form > input {
+  display: inline-block;
+  width: 400px;
+  margin-top: 9px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+  border: none;
+
+  padding: 15px;
+  padding-left: 22px;
+  box-sizing: border-box;
+
+  font-size: 15px;
+  font-weight: 400;
+  color: rgba(28, 28, 28, 0.4);
+
+  &::placeholder {
+    font-size: 13px;
+    font-weight: 400;
+  }
+}
+
+.popup__send-button,
+.popup__button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+  color: rgba(28, 28, 28, 0.4);
+}
+
+.popup__form-message {
+  padding-top: 140px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    background-image: url("../img/sent.svg");
+    background-repeat: no-repeat;
+    background-size: 64px 60px;
+    background-position: 0 0;
+    width: 64px;
+    height: 60px;
+
+    top: 60px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+.popup--show {
+  display: block;
+}
+
+.popup-modal {
+  overflow: hidden;
+}
+
+@media (max-width: $tablet-width) {
+  .popup > form,
+  .popup__form {
+    width: 100%;
+    min-height: 100%;
+    height: auto;
+    background-color: #f3f3f3;
+
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-top: 136px;
+    padding-right: 16px;
+    padding-bottom: 149px;
+    padding-left: 16px;
+  }
+
+  .popup > form > input {
+    width: 100%;
+  }
 }
